--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "textlint-rule-stop-words": "^2.0.9",
     "textlint-rule-terminology": "^2.1.5",
     "textlint-rule-write-good": "^1.6.2",
-    "vuepress": "^2.0.0-beta.13",
-    "axios": "^0.21.1",
-    "lodash": "^4.17.21",
-    "vue-prism-component": "^2.0.0"
+    "vue-prism-component": "^2.0.0",
+    "vuepress": "^2.0.0-beta.13"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.1.4"
   }
 }
