--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "textlint-rule-terminology": "^2.1.5",
     "textlint-rule-write-good": "^1.6.2",
     "vue-prism-component": "^2.0.0",
-    "vuepress": "^2.0.0-beta.24"
+    "vuepress": "^2.0.0-beta.24",
+    "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default"
   },
   "dependencies": {
     "cross-fetch": "^3.1.4"
