--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
     "@vuepress/plugin-debug": "2.0.0-beta.26",
+    "@vuepress/plugin-search": "2.0.0-beta.26",
     "@vuepress/plugin-register-components": "2.0.0-beta.26",
     "element-plus": "^1.0.2-beta.41",
     "markdown-it-include": "^2.0.0",
