--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
     "@vuepress/plugin-debug": "2.0.0-beta.26",
-    "@vuepress/plugin-search": "2.0.0-beta.26",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
     "@vuepress/plugin-register-components": "2.0.0-beta.26",
+    "@vuepress/plugin-search": "2.0.0-beta.26",
+    "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
     "element-plus": "^1.0.2-beta.41",
     "markdown-it-include": "^2.0.0",
     "markdown-link-check": "^3.8.7",
@@ -27,7 +28,7 @@
     "textlint-rule-write-good": "^1.6.2",
     "vue-prism-component": "^2.0.0",
     "vuepress": "^2.0.0-beta.26",
-    "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default"
+    "vuepress-plugin-sitemap2": "^2.0.0-alpha.7"
   },
   "dependencies": {
     "cross-fetch": "^3.1.4"
