--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@vuepress/plugin-debug": "2.0.0-beta.26",
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
-    "@vuepress/plugin-register-components": "2.0.0-beta.26",
-    "@vuepress/plugin-search": "2.0.0-beta.26",
+    "@vuepress/plugin-debug": "2.0.0-beta.27",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.27",
+    "@vuepress/plugin-register-components": "2.0.0-beta.27",
+    "@vuepress/plugin-search": "2.0.0-beta.27",
     "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
     "element-plus": "^1.0.2-beta.41",
     "markdown-it-include": "^2.0.0",
@@ -27,10 +27,12 @@
     "textlint-rule-terminology": "^2.1.5",
     "textlint-rule-write-good": "^1.6.2",
     "vue-prism-component": "^2.0.0",
-    "vuepress": "^2.0.0-beta.26",
+    "vuepress": "^2.0.0-beta.27",
     "vuepress-plugin-sitemap2": "^2.0.0-alpha.7"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.4"
+    "cross-fetch": "^3.1.4",
+    "postcss-loader": "^6.2.0",
+    "vite": "^2.6.14"
   }
 }
