--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vuepress/plugin-register-components": "2.0.0-beta.27",
     "@vuepress/plugin-search": "2.0.0-beta.27",
     "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
-    "element-plus": "^1.0.2-beta.41",
+    "element-plus": "^1.2.0-beta.5",
     "markdown-it-include": "^2.0.0",
     "markdown-link-check": "^3.8.7",
     "textlint": "^11.9.0",
@@ -28,9 +28,8 @@
     "textlint-rule-write-good": "^1.6.2",
     "vue-prism-component": "^2.0.0",
     "vuepress": "^2.0.0-beta.27",
-    "vuepress-plugin-sitemap2": "^2.0.0-alpha.7"
-  },
-  "dependencies": {
+    "vuepress-plugin-sitemap2": "^2.0.0-alpha.7",
+    "axios": "^0.24.0",
     "cross-fetch": "^3.1.4",
     "postcss-loader": "^6.2.0",
     "vite": "^2.6.14"
