--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@vuepress/plugin-debug": "2.0.0-beta.27",
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.27",
-    "@vuepress/plugin-register-components": "2.0.0-beta.27",
-    "@vuepress/plugin-search": "2.0.0-beta.27",
+    "@vuepress/bundler-webpack": "^2.0.0-beta.37",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.37",
+    "@vuepress/plugin-register-components": "2.0.0-beta.37",
+    "@vuepress/plugin-search": "2.0.0-beta.37",
     "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
+    "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.5",
     "markdown-it-include": "^2.0.0",
     "markdown-link-check": "^3.8.7",
+    "postcss-loader": "^6.2.0",
     "textlint": "^11.9.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-common-misspellings": "^1.0.1",
@@ -26,11 +28,9 @@
     "textlint-rule-stop-words": "^2.0.9",
     "textlint-rule-terminology": "^2.1.5",
     "textlint-rule-write-good": "^1.6.2",
+    "vite": "^2.6.14",
     "vue-prism-component": "^2.0.0",
-    "vuepress": "^2.0.0-beta.27",
-    "vuepress-plugin-sitemap2": "^2.0.0-alpha.7",
-    "axios": "^0.24.0",
-    "postcss-loader": "^6.2.0",
-    "vite": "^2.6.14"
+    "vuepress": "^2.0.0-beta.37",
+    "vuepress-plugin-sitemap2": "^2.0.0-beta.24"
   }
 }
