--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@vuepress/bundler-webpack": "^2.0.0-beta.37",
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.37",
-    "@vuepress/plugin-register-components": "2.0.0-beta.37",
-    "@vuepress/plugin-search": "2.0.0-beta.37",
+    "@vuepress/bundler-webpack": "^2.0.0-beta.38",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.38",
+    "@vuepress/plugin-register-components": "2.0.0-beta.38",
+    "@vuepress/plugin-search": "2.0.0-beta.38",
     "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
     "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.5",
@@ -30,7 +30,9 @@
     "textlint-rule-write-good": "^1.6.2",
     "vite": "^2.6.14",
     "vue-prism-component": "^2.0.0",
-    "vuepress": "^2.0.0-beta.37",
-    "vuepress-plugin-sitemap2": "^2.0.0-beta.24"
+    "vuepress": "^2.0.0-beta.38",
+    "vuepress-plugin-seo2": "2.0.0-beta.41",
+    "vuepress-plugin-sitemap2": "^2.0.0-beta.41",
+    "vuepress-plugin-redirect2": "^2.0.0-beta.44"
   }
 }
