--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "devDependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@vuepress/bundler-webpack": "^2.0.0-beta.38",
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.38",
-    "@vuepress/plugin-register-components": "2.0.0-beta.38",
-    "@vuepress/plugin-search": "2.0.0-beta.38",
-    "@vuepress/theme-default": "file:/home/vmihailenco/workspace/vuepress-next/packages/@vuepress/theme-default",
+    "vuepress": "2.0.0-beta.46",
+    "@vuepress/bundler-webpack": "2.0.0-beta.46",
+    "@vuepress/plugin-google-analytics": "2.0.0-beta.46",
+    "@vuepress/plugin-register-components": "2.0.0-beta.46",
+    "@vuepress/plugin-search": "2.0.0-beta.46",
+    "@vuepress/theme-default": "2.0.0-beta.46",
     "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.5",
     "markdown-it-include": "^2.0.0",
     "markdown-link-check": "^3.8.7",
     "postcss-loader": "^6.2.0",
+    "sass-loader": "^13.0.0",
     "textlint": "^11.9.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-common-misspellings": "^1.0.1",
@@ -28,11 +30,9 @@
     "textlint-rule-stop-words": "^2.0.9",
     "textlint-rule-terminology": "^2.1.5",
     "textlint-rule-write-good": "^1.6.2",
-    "vite": "^2.6.14",
     "vue-prism-component": "^2.0.0",
-    "vuepress": "^2.0.0-beta.38",
-    "vuepress-plugin-seo2": "2.0.0-beta.41",
-    "vuepress-plugin-sitemap2": "^2.0.0-beta.41",
-    "vuepress-plugin-redirect2": "^2.0.0-beta.44"
+    "vuepress-plugin-redirect": "2.0.0-beta.76",
+    "vuepress-plugin-seo2": "2.0.0-beta.76",
+    "vuepress-plugin-sitemap2": "2.0.0-beta.76"
   }
 }
