--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -2,5 +2,5 @@ trailingComma: all
 tabWidth: 2
 semi: false
 singleQuote: true
-proseWrap: always
-printWidth: 10000
+printWidth: 80
+embeddedLanguageFormatting: off
